tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00148.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00148.c" (c, x86_64-unknown-linux-gnu)
global arr : rec_S[2] = [{1, 2}, {3, 4}] [external, default, align 16, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %31 = const 0 : s64i
        %32 = get_global @arr : rec_S[2]*
        %33 = get_element %32[%31] : rec_S*
        %34 = get_member %33[0] "a" : s32i*
        %35 = load %34 : s32i, align 16
        %36 = const 1 : s32i
        %37 = cmp ne %35, %36 : bool
        if %37 {
            %38 = const 1 : s32i
            store %38, %0
            %39 = load %0 : s32i
            return %39
        }
        yield
    }
    scope {
        %22 = const 0 : s64i
        %23 = get_global @arr : rec_S[2]*
        %24 = get_element %23[%22] : rec_S*
        %25 = get_member %24[1] "b" : s32i*
        %26 = load %25 : s32i, align 4
        %27 = const 2 : s32i
        %28 = cmp ne %26, %27 : bool
        if %28 {
            %29 = const 2 : s32i
            store %29, %0
            %30 = load %0 : s32i
            return %30
        }
        yield
    }
    scope {
        %13 = const 1 : s64i
        %14 = get_global @arr : rec_S[2]*
        %15 = get_element %14[%13] : rec_S*
        %16 = get_member %15[0] "a" : s32i*
        %17 = load %16 : s32i, align 8
        %18 = const 3 : s32i
        %19 = cmp ne %17, %18 : bool
        if %19 {
            %20 = const 3 : s32i
            store %20, %0
            %21 = load %0 : s32i
            return %21
        }
        yield
    }
    scope {
        %4 = const 1 : s64i
        %5 = get_global @arr : rec_S[2]*
        %6 = get_element %5[%4] : rec_S*
        %7 = get_member %6[1] "b" : s32i*
        %8 = load %7 : s32i, align 4
        %9 = const 4 : s32i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = const 4 : s32i
            store %11, %0
            %12 = load %0 : s32i
            return %12
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
