tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00151.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00151.c" (c, x86_64-unknown-linux-gnu)
global arr : s32i[5][3][2] = [[[0, 0, 3, 5], [1, 0, 0, 6, 7]], [[1, 2], [0, 0, 0, 0, 7]]] [external, default, align 16, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 4 : s64i
    %3 = const 1 : s64i
    %4 = const 0 : s64i
    %5 = get_global @arr : s32i[5][3][2]*
    %6 = get_element %5[%4] : s32i[5][3]*
    %7 = get_element %6[%3] : s32i[5]*
    %8 = get_element %7[%2] : s32i*
    %9 = load %8 : s32i, align 4
    %10 = const 4 : s64i
    %11 = const 1 : s64i
    %12 = const 1 : s64i
    %13 = get_global @arr : s32i[5][3][2]*
    %14 = get_element %13[%12] : s32i[5][3]*
    %15 = get_element %14[%11] : s32i[5]*
    %16 = get_element %15[%10] : s32i*
    %17 = load %16 : s32i, align 4
    %18 = cmp eq %9, %17 : bool
    %19 = not %18 : bool
    %20 = cast(bool_to_int) %19 : s32i
    store %20, %0
    %21 = load %0 : s32i
    return %21
}
