tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00153.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00153.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_S, "s", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 0 : s32i
    %4 = get_member %1[0] "f" : s32i*
    store %3, %4, align 4
    %5 = get_member %1[0] "f" : s32i*
    %6 = load %5 : s32i, align 4
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
